--- a/practice.ipynb
+++ b/practice.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -20,11 +20,11 @@
    "source": [
     "# формируем выборку\n",
     "\n",
-    "with open('datasets/rt-polaritydata/rt-polaritydata/rt-polarity.pos', 'r+', errors='ignore') as file:\n",
+    "with open('rt-polaritydata/rt-polarity.pos', 'r+', errors='ignore') as file:\n",
     "    positive_sentencies = file.readlines()\n",
     "cleared_positive_sentencies = [sentence.rstrip('\\n') for sentence in positive_sentencies]\n",
     "\n",
-    "with open('datasets/rt-polaritydata/rt-polaritydata/rt-polarity.neg', 'r+', errors='ignore') as file:\n",
+    "with open('rt-polaritydata/rt-polarity.neg', 'r+', errors='ignore') as file:\n",
     "    negative_sentencies = file.readlines()\n",
     "\n",
     "cleared_negative_sentencies = [sentence.rstrip('\\n') for sentence in negative_sentencies]"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -96,29 +96,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4160</th>\n",
+       "      <th>1793</th>\n",
+       "      <td>0</td>\n",
+       "      <td>intriguing documentary which is emotionally di...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3978</th>\n",
        "      <td>1</td>\n",
-       "      <td>nair doesn't use [monsoon wedding] to lament t...</td>\n",
+       "      <td>shyamalan takes a potentially trite and overus...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2647</th>\n",
+       "      <th>302</th>\n",
        "      <td>0</td>\n",
-       "      <td>though it draws several decent laughs , it's l...</td>\n",
+       "      <td>this is a movie so insecure about its capacity...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>583</th>\n",
+       "      <th>5051</th>\n",
        "      <td>0</td>\n",
-       "      <td>simply put , there should have been a more com...</td>\n",
+       "      <td>not once in the rush to save the day did i bec...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3492</th>\n",
+       "      <th>1765</th>\n",
        "      <td>0</td>\n",
-       "      <td>the film's stagecrafts are intimate and theref...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5142</th>\n",
-       "      <td>0</td>\n",
-       "      <td>a film really has to be exceptional to justify...</td>\n",
+       "      <td>with the exception of some fleetingly amusing ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -126,14 +126,14 @@
       ],
       "text/plain": [
        "      class                                           sentence\n",
-       "4160      1  nair doesn't use [monsoon wedding] to lament t...\n",
-       "2647      0  though it draws several decent laughs , it's l...\n",
-       "583       0  simply put , there should have been a more com...\n",
-       "3492      0  the film's stagecrafts are intimate and theref...\n",
-       "5142      0  a film really has to be exceptional to justify..."
+       "1793      0  intriguing documentary which is emotionally di...\n",
+       "3978      1  shyamalan takes a potentially trite and overus...\n",
+       "302       0  this is a movie so insecure about its capacity...\n",
+       "5051      0  not once in the rush to save the day did i bec...\n",
+       "1765      0  with the exception of some fleetingly amusing ..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -195,31 +195,25 @@
     "2. Постройте модель логистической регрессии\n",
     "3. Постройте линейный классификатор классификатор на основе метода опорных векторов\n",
     "\n",
-    "Измерьте качество каждого алгоритма с помощью кросс-валидации по 5-ти блокам по метрике accuracy. Выберите наилучших алгоритм.\n",
+    "Измерьте качество каждого алгоритма с помощью кросс-валидации по 5-ти блокам по метрике accuracy. Выберите наилучший алгоритм.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# импортируем нужные модели\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import LinearSVC"
+    "from sklearn.svm import LinearSVC\n",
+    "# импортируем то, что нужно для кросс-валидации\n",
+    "from sklearn.model_selection import cross_val_score"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
